# qhld-engine

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile-dev  README.md  Untitled.ipynb  cron-execute-py-file.sh  migrate_alerts.py  migrate_initiatives.py  migrate_scans.py  pyproject.toml  quickex.py  requirements.txt
alerts/: settings.py
extractors/: config.py  extractor.py
extractors/paraguay/: initiatives.py  initiatives_status.py  members.py
extractors/spain/: congress_api.py  grouped_deputies.py  groups.json  groups.py  initiative_extractor_factory.py  initiatives.py  members.py
extractors/spain/deputy_extractors/: deputy_extractor.py
extractors/spain/initiative_extractors/: amendment_extractor.py  bulletins_extractor.py  initiative_extractor.py  initiative_status.py  interventions_extractor.py  question_extractor.py  status_map.py  video_extractor.py  vote_extractor.py
extractors/spain/initiative_extractors/amendments/: base_amendments.py  partial_amendments.py  senate_amendments.py  totallity_amendments.py
extractors/spain/initiative_extractors/utils/: pdf_parsers.py
footprint/: compute_footprint.py  footprint_managers.py
qhld_engine/: cli.py  logger.py  utils.py
qhld_engine/alerts/: alerts.py  send_alerts.py  settings.py  settings.py.example
qhld_engine/application/evaluation/: benchmark.py  mentions_benchmark.py  mentions_goldset.json  parse_benchmark.py  parse_queryset.json  queryset.json
qhld_engine/application/search/: group_aliases.json  natural_search.py  resolve_entities.py  search_speeches.py
qhld_engine/application/speeches/: backfill_entities.py  backfill_mentions.py  extract_speeches.py  index_speeches.py  mention_tagging.py  persons_catalog.json  persons_catalog.py
qhld_engine/domain/evaluation/: mentions_scoring.py  parse_scoring.py  scoring.py
qhld_engine/domain/ports/: ner.py  query_parser.py  reranker.py  sparse_embeddings.py  vector_store.py
qhld_engine/domain/speeches/: chunking.py  language_split.py  mentions.py  segmentation.py
qhld_engine/evaluation/: run_ab.py  scoring.py
qhld_engine/extractors/: extractor.py
qhld_engine/extractors/andorra/: groups.py  initiatives.py  members.py
qhld_engine/extractors/paraguay/: api.py  groups.py  initiatives.py  initiatives_attachments.py  legislative_period.py  members.py
qhld_engine/extractors/spain/: congress_api.py  grouped_deputies.py  groups.json.example  groups.py  initiative_types.py  initiatives.py  members.py  utils.py
qhld_engine/extractors/spain/deputy_extractors/: deputy_extractor.py
qhld_engine/extractors/spain/initiative_extractors/: boe_extractor.py  bulletins_extractor.py  (+6 more)
qhld_engine/footprint/: compute_footprint.py  footprint_managers.py
qhld_engine/infrastructure/config/: settings.py
qhld_engine/infrastructure/embeddings/: factory.py  google.py  ollama.py  openai.py
qhld_engine/infrastructure/language/: __init__.py  detector.py
qhld_engine/infrastructure/llm/: anthropic.py  factory.py  google.py  mistral.py  ollama.py  openai.py
qhld_engine/infrastructure/ner/: factory.py  spacy.py
qhld_engine/infrastructure/queryparsing/: factory.py  llm.py  rule_based.py
qhld_engine/infrastructure/reranker/: cross_encoder.py  factory.py  noop.py
qhld_engine/infrastructure/sparse/: bm25.py  factory.py
qhld_engine/infrastructure/vectorstore/: factory.py  naming.py  qdrant.py
qhld_engine/presentation/cli/: debug.py  embeddings.py  evaluation.py  extractor.py  search.py  speeches.py  tagger.py  untagger.py
qhld_engine/stats/: process_stats.py  stats.py
qhld_engine/tagger/: tag_initiatives.py  tagger.py
qhld_engine/untagger/: untag_initiatives.py
scripts/: backfill_constituency.py  backfill_entities.py
stats/: process_stats.py
tagger/: tag_initiatives.py  topic_alignment.py
tests/: conftest.py
tests/integration/: conftest.py  test_extractor_writepaths_paraguay.py  test_extractor_writepaths_spain.py  test_index_and_search_speeches.py  test_tag_initiatives.py  test_tagger_rename.py  test_untagger.py
tests/unit/: test_cli.py  test_extract_references_regression.py  test_extractor_parsers.py  test_extractor_writepaths_spain.py  test_footprint_writepath.py  test_paraguay_extractor.py  test_pdf_parsers.py  test_settings.py  test_tag_merge.py  test_topic_alignment.py  test_utils.py  test_vote_extractor.py
tests/unit/application/: test_extract_speeches.py  test_index_speeches.py  test_mention_tagging.py  test_natural_search.py  test_resolve_entities.py  test_search_speeches.py  test_speech_extraction_characterization.py
tests/unit/domain/: test_chunking.py  test_language_split.py  test_mentions.py  test_parse_scoring.py  test_speech_segmentation.py
tests/unit/evaluation/: test_scoring.py
untagger/: untag_initiatives.py
(+25 files in other folders)
