[project]
name = "qhld-engine"
version = "2.0.0"
description = "QHLD Engine"
authors = [{ name = "pr3ssh" }]
requires-python = ">=3.12"

dependencies = [
    "beautifulsoup4==4.12.3",
    "cssselect==1.2.0",
    "pdf2image==1.17.0",
    "pdfminer.six==20240706",
    "pytesseract==0.3.13",
    "python-docx==1.1.2",
    "python-pptx==1.0.2",
    "requests-futures==1.0.2",
    "thefuzz==0.22.1",
    "tqdm==4.67.1",
    "qhld-data",
    "qhld-tasks",
]

[dependency-groups]
dev = ["ipdb==0.13.13"]

[tool.uv.sources]
qhld-data  = { git = "https://github.com/politicalwatch/qhld-data.git", tag = "v2.0.0" }
qhld-tasks = { git = "https://github.com/politicalwatch/qhld-tasks.git", tag = "v2.0.0" }

[tool.uv]
package = false
