[project]
name = "qhld-engine"
version = "2.0.0"
description = "QHLD Engine"
authors = [{ name = "pr3ssh" }]
requires-python = ">=3.12"

dependencies = [
    "beautifulsoup4==4.12.3",
    "cssselect==1.2.0",
    "pdf2image==1.17.0",
    "pdfminer.six==20240706",
    "pydantic-settings==2.13.0",
    "pytesseract==0.3.13",
    "python-docx==1.1.2",
    "python-pptx==1.0.2",
    "requests-futures==1.0.2",
    "thefuzz==0.22.1",
    "tqdm==4.67.1",
    "typer>=0.16.0",
    "langchain-core==1.4.8",
    "langchain-anthropic==1.4.8",
    "langchain-openai==1.3.3",
    "langchain-ollama==1.1.0",
    "langchain-google-genai==4.2.6",
    "langchain-mistralai==1.1.5",
    "qhld-data",
    "qhld-tasks",
]

[project.scripts]
qhld = "qhld_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qhld_engine"]

[dependency-groups]
dev = [
    "ipdb==0.13.13",
    "pytest==9.1.1",
    "testcontainers[mongodb]==4.14.2",
]

[tool.pytest.ini_options]
# Listed unit-first so the fast no-infra tests run before the container-backed ones.
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "unit: no-infra tests; run anywhere with no Mongo/Docker. Filter with `-m unit`.",
    "integration: need a throwaway Mongo (testcontainers); auto-skip when Docker is unavailable. Filter with `-m integration`.",
]

[tool.uv.sources]
qhld-data  = { git = "https://github.com/politicalwatch/qhld-data.git", tag = "v2.0.1" }
qhld-tasks = { git = "https://github.com/politicalwatch/qhld-tasks.git", tag = "v2.0.1" }

[tool.uv]
package = true
