[project]
name = "qhld-engine"
version = "2.0.0"
description = "QHLD Engine"
authors = [{ name = "pr3ssh" }]
requires-python = ">=3.12"

dependencies = [
    "beautifulsoup4==4.15.0",
    "cssselect==1.4.0",
    "pdf2image==1.17.0",
    "pdfminer.six==20260107",
    "pydantic-settings==2.14.2",
    "pytesseract==0.3.13",
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "requests-futures==1.0.2",
    "thefuzz==0.22.1",
    "tqdm==4.67.1",
    "typer>=0.16.0",
    # Engine indexes + tags: same served providers as the backend (langchain-
    # openai + fastembed) PLUS spaCy for speaker/mention/entity tagging. The
    # [engine] extra pulls exactly that — still no torch (reranking is hosted).
    "qhld-ai[engine]",
    "qhld-data",
    "qhld-tasks",
]

[project.scripts]
qhld = "qhld_engine.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qhld_engine"]

[dependency-groups]
dev = [
    "ipdb==0.13.13",
    "pytest==9.1.1",
    "testcontainers[mongodb]==4.14.2",
    # Ollama embeddings for local dev only; the prod image runs with --no-dev
    # and stays on the lean [engine] set above. Other providers install ad-hoc.
    "qhld-ai[ollama]",
]

[tool.pytest.ini_options]
# Listed unit-first so the fast no-infra tests run before the container-backed ones.
testpaths = ["tests/unit", "tests/integration"]
markers = [
    "unit: no-infra tests; run anywhere with no Mongo/Docker. Filter with `-m unit`.",
    "integration: need a throwaway Mongo (testcontainers); auto-skip when Docker is unavailable. Filter with `-m integration`.",
]

[tool.uv.sources]
# DEV (TFM speeches branch): qhld-data + qhld-tasks + qhld-ai pinned to the
# paired `feat/parliamentary-speech-analysis` branch (resolvable in the Docker
# build, unlike a local path). Revert all to tag pins before merge.
qhld-data  = { git = "https://github.com/politicalwatch/qhld-data.git", branch = "feat/parliamentary-speech-analysis" }
qhld-tasks = { git = "https://github.com/politicalwatch/qhld-tasks.git", branch = "feat/parliamentary-speech-analysis" }
qhld-ai    = { git = "https://github.com/politicalwatch/qhld-ai.git", branch = "feat/parliamentary-speech-analysis" }

[tool.uv]
package = true
